docs/api/qiskit/0.19/qiskit.circuit.library.U3Gate.mdx
---
title: U3Gate (v0.19)
description: API reference for qiskit.circuit.library.U3Gate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.U3Gate
---

# U3Gate

<Class id="qiskit.circuit.library.U3Gate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/u3.py" signature="U3Gate(theta, phi, lam, label=None)" modifiers="class">
  Generic single-qubit rotation gate with 3 Euler angles.

  Implemented using two X90 pulses on IBM Quantum systems:

$$
U3(\theta, \phi, \lambda) =
RZ(\phi - \pi/2) RX(\pi/2) RZ(\pi - \theta) RX(\pi/2) RZ(\lambda - \pi/2)
$$

  **Circuit symbol:**

  ```python
       ┌───────────┐
  q_0: ┤ U3(ϴ,φ,λ) ├
       └───────────┘
  ```

  **Matrix Representation:**

$$
\begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}U3(\theta, \phi, \lambda) =
\begin{pmatrix}
\cos(\th)          & -e^{i\lambda}\sin(\th) \\
e^{i\phi}\sin(\th) & e^{i(\phi+\lambda)}\cos(\th)
\end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

  **Examples:**

$$
U3(\theta, -\frac{\pi}{2}, \frac{pi}{2}) = RX(\theta)
$$

$$
U3(\theta, 0, 0) = RY(\theta)
$$

  Create new U3 gate.

  ## Attributes

  <span id="u3gate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.U3Gate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="u3gate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.U3Gate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="u3gate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.U3Gate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="u3gate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.U3Gate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="u3gate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.U3Gate.add_decomposition" signature="U3Gate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="u3gate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.U3Gate.assemble" signature="U3Gate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="u3gate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.U3Gate.broadcast_arguments" signature="U3Gate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="u3gate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.U3Gate.c_if" signature="U3Gate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="u3gate-control" />

  ### control

  <Function id="qiskit.circuit.library.U3Gate.control" signature="U3Gate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-U3 gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="u3gate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.U3Gate.copy" signature="U3Gate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="u3gate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.U3Gate.inverse" signature="U3Gate.inverse()">
    Return inverted U3 gate.

    $U3(\theta,\phi,\lambda)^{\dagger} =U3(-\theta,-\phi,-\lambda)$)
  </Function>

  <span id="u3gate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.U3Gate.is_parameterized" signature="U3Gate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="u3gate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.U3Gate.mirror" signature="U3Gate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="u3gate-power" />

  ### power

  <Function id="qiskit.circuit.library.U3Gate.power" signature="U3Gate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="u3gate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.U3Gate.qasm" signature="U3Gate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="u3gate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.U3Gate.repeat" signature="U3Gate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="u3gate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.U3Gate.to_matrix" signature="U3Gate.to_matrix()">
    Return a Numpy.array for the U3 gate.
  </Function>
</Class>

